<resources>

    <string name="app_name">Revoscope App</string>

    <string name="data_display_panel">readings</string>
    <string name="voltage1">V1:</string>
    <string name="voltage2">V2:</string>
    <string name="frequency1">F1:</string>
    <string name="frequency2">F2:</string>
    <string name="volt1">   </string>
    <string name="volt2">   </string>
    <string name="freq1">     </string>
    <string name="freq2">     </string>

    <string name="scope_control_panel">scope control panel</string>
    <string name="channel_1_switch">osc 1</string>
    <string name="channel_1_switch_name">osc 1</string>
    <string name="channel_2_switch">osc 2</string>
    <string name="channel_2_switch_name">osc 2</string>
    <string name="time_base">time/amp</string>
    <string name="pause_play">stop/run</string>
    <string name="submit_results">submit\nresults</string>

    <string name="a_product_of_reva_university">A product of REVA University</string>
    <string name="progress_seekbar_timebase"></string>
    <string name="osc_1_status"></string>
    <string name="osc_2_status"></string>
    <string name="down2">down</string>
    <string name="down">down</string>
    <string name="pos_2">pos 2</string>
    <string name="up">up</string>
    <string name="pos_1">pos 1</string>
    <string name="reva_labkit">REVA Labkit</string>
    <string name="_1_choose">Tips :-\n1. Turn your device on.\n2. Make sure you connect to the device only.\n3. Make your Bluetooth settings visible to others.\n4. Turn off the bluetooth when you dont need it.</string>
    <string name="connect_to_labkit">connect to kit</string>
    <string name="is_your_phone_s_bluetooth_connected_to_your_labkit">Is your phone\'s bluetooth connected to our device?</string>

</resources>
